--- a/css/main.css
+++ b/css/main.css
@@ -1596,6 +1596,17 @@ li.sub-menu--item.nav-item-has-children i {
   margin-bottom: 0;
 }
 
+.pp{
+  font-family: Karla;
+  color: #333333;
+  font-size: 21px;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: -0.4px;
+  line-height: 36px;
+  margin-bottom: 0;
+}
+
 /*Section heading style-6*/
 .section-heading-6 h2 {
   font-family: Work Sans;
