--- a/css/main.css
+++ b/css/main.css
@@ -2416,7 +2416,7 @@ p{
   }
 }
 
-.feature-l-11-items .content-body h5 {
+.feature-l-11-items .content-body .titre {
   font-family: Gothic A1;
   font-style: normal;
   font-weight: 800;
